--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <canvas id="canvas1"></canvas>
 <script src="js/processButton.js"></script>
+<script src="js/Rune.js"></script>
 <script src="js/app.js"></script>
 </body>
 </html>
